--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@headlessui/react": "^1.7.14",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "contentful": "^10.1.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
