--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@headlessui/react": "^1.7.14",
+    "@splidejs/react-splide": "^0.7.12",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "contentful": "^10.1.3",
