--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@headlessui/react": "^1.7.14",
+    "@sendgrid/mail": "^7.7.0",
+    "@sentry/nextjs": "^7.53.1",
     "@splidejs/react-splide": "^0.7.12",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
