--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hamburger-menus": "^1.0.16",
+    "sass": "^1.62.1",
     "tailwindcss": "3.3.2"
   }
 }
